# dkmat

./: .gitignore  .test_dkmat.py.swp  LICENSE  MANIFEST.in  README.md  dkmat.py  pyproject.toml  test_dkmat.py
